Estructura HTML Básica

--- a/index.html
+++ b/index.html
@@ -11,9 +11,78 @@
     <header>
         <div class="contenedor">
             <div class="logo">
-                
+                <img src="img/Cristian Berrio.png" alt="logo-foto">
             </div>
+            <nav class="menu">
+                <a href="#">Inicio</a>
+                <a href="#">Servicios</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Blog</a>
+                <a href="#">Contactos</a>
+            </nav>
         </div>
     </header>
+    <!-- Banner ppal-->
+        <section class="banner">
+            <div>
+            <div class="container llamada-accion">
+              <p>"No soy nada. Nunca sere nada. No puedo querer ser nada.<hr>Aparte de esto, tengo en mí todos los sueños del mundo..."</p>
+              <h2>BIENVENIDOS A MI PRIMER PORTAFOLIO</h2>
+              <a href= "#contactosection">Ver contacto</a>
+            </div>
+            </div>
+        </section>
+          <!-- Sección Bienvenida -->
+        <section class="bienvenida">
+        <div class="contenedor">
+          <h3>¿Quien soy yo actualmente?</h3>
+          <p>17/03/2022</p>
+          <p>Profesional Ingeniero Ambiental y Sanitario e Ingeniero Civil de la Universidad de la Salle con un año y medio de experiencia en gestión y desarrollo de proyectos de construcción de viviendas como residente de obra y auxiliar de presupuestos( (analisis de cantidades, presupuestos de obra y contratos ; ensayos en obra y procesos constructivos, ademas de diseño en programas como AutoCAD o modelación en SAP2000), manejo de SINCO con conocimientos en manejo ambiental, sistemas de tratamiento de aguas residuales, contaminación de recursos hídrico y atmosférico, identificación de impactos ambientales y manejo de residuos sólidos. A nivel personal y extracurricular, mis habilidades interpersonales le han permitido el manejo de grupos en actividades de aprendizaje, recreación y deporte, buen liderazgo y un alto compromiso por el logro de sus metas, con un gran sentido de pertenencia, responsabilidad, honestidad y proactivo; dispuesto a adaptarse a los requerimientos y exigencias de las organizaciones modernas que buscan alcanzar altos desempeños en términos humanos y productivos.</p>
+        </div>
+      </section>
+      <!-- Sección Contacto -->
+      <section id="Contactosection" class="nosotros">
+        <div class="contenedor">
+          <div class="foto-equipo">
+            <img src="img/camino_entre_arboles.jpg" alt="Foto nuestro equipo">
+          </div>
+          <div class="conocenos">
+            <p>CONOZCAMONOS</p>
+            <h3>UN POCO SOBRE MI</h3>
+            <p>Ingeniero dispuesto a solucionar los problemas más complejos de maneras integrales</p>
+            <p>Hola, gracias por visitar mi primer portafolio, actualmente soy ingeniero ambiental, sanitario y civil quien esta demasiado interesado en la técnologia y esta en pasos de aprender a programar. Mediante este primer portafolio o bien pueda ser un blog dado que no tiene más allá del frontend básico aprendido en el curso de Crehana de desarrollo web con HTML + CSS, además de agregar más conocimiento del curso de Git y Github tambíen con crehana. Soy gran amante de los viajes y quisiera algún día dar la vuelta por el mundo y conocer demasiadas culturas diferentes. Estudio programación y marketing digital para conseguir esa libertad financiera que tanto se habla y poder realizar mi sueño.. Que tengo muchos más... No se pierdan para seguir conociendo de mis avances y como esto les puede ayudar. Dejo mi Linkedin y mi instagram a continuación.</p>
+            <a target="_blank" href="https://www.linkedin.com/in/cristianfelipebm/">Instagram</a>
+            <a target="_blank" href="https://www.instagram.com/feliipeberrio/?hl=es">Linkedin</a>
+        </div>
+      </div>
+    </section>
+    <!-- Pie de página -->
+    <footer>
+      <div class="top-footer"></div>
+      <div class="center-footer">
+        <div class="contenedor">
+          <div class="widget">
+            <h4>LOREM IPSUM DOLOR</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="widget">
+            <h4>LOREM IPSUM DOLOR</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="widget">
+            <h4>LOREM IPSUM DOLOR</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+          <div class="widget">
+            <h4>LOREM IPSUM DOLOR</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div>
+      <div class="bottom-footer">
+        <p>&copy; Todos los derechos reservados</p>
+      </div>
+
+    </footer>
 </body>
 </html>
